完善客户端的登录支持和服务端的接口
